The network process tries to take a process assertion when NetworkProcess::processWillSuspendImminently() is called https://bugs.webkit.org/show_bug.cgi?id=197888

Reviewed by Geoffrey Garen.

When actualPrepareToSuspend() in the Network process is called set the 'IsSuspended' flag on the SQLite database tracker and unset
the flag when the process resume. This is consistent with what we already do in the WebProcess and makes sure that
the network process does not try and take on a new assertion due to locked files when getting notified it is about to get
suspended.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::actualPrepareToSuspend):
(WebKit::NetworkProcess::processWillSuspendImminently):
(WebKit::NetworkProcess::resume):

Canonical link: https://commits.webkit.org/212018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245297 268f45cc-cd09-0410-ab3c-d52691b4dbfc